--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/starlight-tailwind": "^2.0.3",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.7.2",
+    "@digi4care/astro-google-tagmanager": "^1.4.0",
     "@preline/accordion": "^2.4.1",
     "@preline/collapse": "^2.3.0",
     "@preline/dropdown": "^2.3.0",
