--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@preline/tabs": "^2.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "acorn": "^8.8.2",
     "astro": "^4.16.18",
     "astro-compressor": "^0.4.1",
+    "astro-expressive-code": "^0.40.1",
     "astro-seo": "^0.8.4",
     "clipboard": "^2.0.11",
     "globby": "^14.0.1",
