--- a/package.json
+++ b/package.json
@@ -11,45 +11,47 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/mdx": "^4.0.7",
     "@astrojs/partytown": "^2.1.3",
-    "@astrojs/react": "^3.6.0",
-    "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/starlight": "^0.24.5",
+    "@astrojs/react": "^3.6.3",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/starlight": "^0.31.1",
     "@astrojs/starlight-tailwind": "^2.0.3",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.7.2",
+    "@astrojs/tailwind": "^5.1.5",
+    "@astrojs/vercel": "^8.0.4",
+    "@builder.io/partytown": "^0.10.3",
     "@digi4care/astro-google-tagmanager": "^1.4.0",
-    "@preline/accordion": "^2.4.1",
-    "@preline/collapse": "^2.3.0",
-    "@preline/dropdown": "^2.3.0",
-    "@preline/overlay": "^2.3.0",
-    "@preline/tabs": "^2.3.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "acorn": "^8.8.2",
-    "astro": "^4.16.18",
+    "@preline/accordion": "^2.5.2",
+    "@preline/collapse": "^2.5.2",
+    "@preline/dropdown": "^2.5.2",
+    "@preline/overlay": "^2.5.2",
+    "@preline/tabs": "^2.5.2",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "acorn": "^8.14.0",
+    "astro": "^5.1.10",
     "astro-compressor": "^0.4.1",
     "astro-expressive-code": "^0.40.1",
     "astro-seo": "^0.8.4",
     "clipboard": "^2.0.11",
-    "globby": "^14.0.1",
-    "gsap": "^3.12.5",
+    "globby": "^14.0.2",
+    "gsap": "^3.12.7",
     "html-minifier-terser": "^7.2.0",
-    "lenis": "^1.1.3",
-    "preline": "^2.3.0",
+    "lenis": "^1.1.20",
+    "preline": "^2.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sharp": "^0.33.4",
+    "sharp": "^0.33.5",
     "sharp-ico": "^0.1.5",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.2"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
-    "astro-vtbot": "^1.7.24",
-    "prettier": "^3.3.2",
-    "prettier-plugin-astro": "^0.14.0",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "@tailwindcss/forms": "^0.5.10",
+    "astro-vtbot": "^1.10.7",
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.5.2"
   }
 }
