--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "lovosis",
-  "type": "module",
   "version": "0.0.1",
+   "type": "module",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check",
-    "buildprod": "node process-html.mjs && node src/scripts/build-and-index.js",
+    "buildprod": "node process-html.mjs && node src/scripts/build-and-index.mjs",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -21,8 +21,7 @@
     "@astrojs/tailwind": "^5.1.5",
     "@astrojs/vercel": "^8.0.4",
     "@builder.io/partytown": "^0.10.3",
-    "@digi4care/astro-google-tagmanager": "^1.4.0",
-    "@preline/accordion": "^2.5.2",
+     "@preline/accordion": "^2.5.2",
     "@preline/collapse": "^2.5.2",
     "@preline/dropdown": "^2.5.2",
     "@preline/overlay": "^2.5.2",
