--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "astro": "^5.1.10",
     "astro-compressor": "^0.4.1",
     "astro-expressive-code": "^0.40.1",
+    "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.4",
     "clipboard": "^2.0.11",
     "globby": "^14.0.2",
